--- a/Views/Renderings/Contact/Contact.cshtml
+++ b/Views/Renderings/Contact/Contact.cshtml
@@ -3,11 +3,11 @@
         <div id="innerContent02">
             <div id="mainContent">
                 <h2 class="TitleH2 DarkScheme">
-                    Contact
+                    @Sitecore.Globalization.Translate.Text("contact")
                 </h2>
                 <div class="BlockAboutContent01">
                     <p class="AboutIntroParagraph DarkScheme">
-                        <strong>BuildingBell by BMT</strong>
+                        <strong>@Sitecore.Globalization.Translate.Text("building-bell")</strong>
                     </p>
                 </div>
                 <div class="HrReplacement HrStyle01">
@@ -15,32 +15,30 @@
                 </div>
                 <div class="BoxContact BoxMargin1">
                     <p class="FontTitleBox DarkScheme">
-                        <strong>Luxembourg:</strong>
+                        <strong>@Sitecore.Globalization.Translate.Text("luxembourg")</strong>
                     </p>
                     <p class="FontSumBox LightScheme TextBold">
-                        231, Val des Bons Malades 2121 Luxembourg-Kirchberg
+                        @Sitecore.Globalization.Translate.Text("luxembourg-address")
                         <br />
                         <strong>Tel.</strong> +12 123 456 789
                     </p>
                 </div>
                 <div class="BoxContact BoxMargin2">
                     <p class="FontTitleBox DarkScheme">
-                        <strong>Belgique:</strong>
+                        <strong>@Sitecore.Globalization.Translate.Text("belgique")</strong>
                     </p>
                     <p class="FontSumBox LightScheme TextBold">
-                        Avenue du Lycée Français, 11 180 Bruxelles
+                        @Sitecore.Globalization.Translate.Text("belgique-address")
                         <br />
                         <strong>Tel.</strong>+ 32 475 800 427
                     </p>
                 </div>
                 <div class="BoxContact BoxMargin3">
                     <p class="FontTitleBox DarkScheme">
-                        <strong>USA:</strong>
+                        <strong>@Sitecore.Globalization.Translate.Text("usa")</strong>
                     </p>
                     <p class="FontSumBox LightScheme TextBold">
-                        2750 NE 183rd Street
-                        <br />
-                        33160 North Miami Beach
+                        @Sitecore.Globalization.Translate.Text("usa-address")
                         <br />
                         <strong>Tel.</strong>+1 858 205 7589
                     </p>
