--- a/Views/Renderings/Home/ForgotPasswordPage.cshtml
+++ b/Views/Renderings/Home/ForgotPasswordPage.cshtml
@@ -3,7 +3,7 @@
         <div id="innerContent02">
             <div id="mainContent">
                 <!-- Change -->
-                <h2 class="PageHeading DarkScheme">Retrieve password</h2>
+                <h2 class="PageHeading DarkScheme">@Sitecore.Globalization.Translate.Text("retrieve-password")</h2>
                 <!-- Change -->
                 @using (Html.BeginRouteForm(Sitecore.Mvc.Configuration.MvcSettings.SitecoreRouteName, FormMethod.Post))
                 {
@@ -11,7 +11,7 @@
                     <fieldset>
                         <div class="HrReplacement HrStyle02 HrSpacing01"><hr class="Hidden" /></div> 
                         <div class="FormItem FormItemSpacing01 LightScheme ">
-                            <label class="TextLabel" for="email">Email address: </label>
+                            <label class="TextLabel" for="email">@Sitecore.Globalization.Translate.Text("email") </label>
                             <div class="TextInputWrapper01 TextInputSize01">
                                 <div class="TextInputWrapper02">
                                     <input type="email" name="email" id="email" class="TextInput LightScheme" required />
@@ -25,12 +25,12 @@
                         <div class="ButtonGroup ButtonGroupSpacing01 PaddingButton">
                             <div class="FormButtonWrapper01">
                                 <div class="FormButtonWrapper02">
-                                    <input class="CommonFormBtn" type="submit" title="Submit" value="Submit" />
+                                    <input class="CommonFormBtn" type="submit" title="@Sitecore.Globalization.Translate.Text("submit")" value="@Sitecore.Globalization.Translate.Text("submit")" />
                                 </div>
                             </div>
                             <div class="FormButtonWrapper01">
                                 <div class="FormButtonWrapper02">
-                                    <input class="CommonFormBtn" type="reset" title="Cancel" value="Cancel" />
+                                    <input class="CommonFormBtn" type="reset" title="@Sitecore.Globalization.Translate.Text("cancel")" value="@Sitecore.Globalization.Translate.Text("cancel")" />
                                 </div>
                             </div>
                         </div>
