--- a/Views/Renderings/Home/NewsContentHome.cshtml
+++ b/Views/Renderings/Home/NewsContentHome.cshtml
@@ -7,7 +7,7 @@
     
     <div class="ContentText">
         <h2 class="TitleH2 DarkScheme">
-            News
+            @Sitecore.Globalization.Translate.Text("news-title")
         </h2>
         @foreach (var news in Model)
         {
