--- a/Views/Renderings/News/NewsDetails.cshtml
+++ b/Views/Renderings/News/NewsDetails.cshtml
@@ -5,14 +5,14 @@
         <div id="innerContent02">
             <div id="mainContent">
                 <div class="BlockPageNavigation BlockPageNavigationAlt04 TitleLeft MarginButtonNews">
-                    <a href="/NewsList" title="Back to list" class="BackBtn"><span class="ColorBackBtn">Back to list</span></a>
+                    <a href="/NewsList" title="Back to list" class="BackBtn"><span class="ColorBackBtn">@Sitecore.Globalization.Translate.Text("back")</span></a>
                 </div>
 
                 <div class="Clr">
                 </div>
                 <div class="HrReplacement HrStyle01"><hr class="Hidden" /></div>
                 <!-----Change----------->
-                <h2 class="PageHeading DarkScheme  MarginNews">News</h2>
+                <h2 class="PageHeading DarkScheme  MarginNews">@Sitecore.Globalization.Translate.Text("news-title")</h2>
                 <!-----Change----------->
                 <div class="BlockArticle">
                     <div class="BlockSideContent">
