--- a/Views/Layouts/OthersLayout.cshtml
+++ b/Views/Layouts/OthersLayout.cshtml
@@ -45,20 +45,16 @@
         <div id="Footer">
             <div id="FooterContent">
                 <div class="FooterBlock01">
-                    <h3 class="FooterHeading">
-                        About
-                    </h3>
+                    <h3 class="FooterHeading">@Sitecore.Globalization.Translate.Text("about-footer")</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer in velit id metus
-                        dignissim tincidunt vitae vitae nulla. In tortor enim, aliquam nec semper in, rhoncus
-                        faucibus augue,...
+                        @Sitecore.Globalization.Translate.Text("about-footer-content")
                     </p>
                 </div>
                 <div class="FooterBlock02">
                     <p class="CopyrightText">
                         &copy; @DateTime.Now.Year Buildingbell &ndash; <a href="mailto:info@buildingbell.com" title="Send mail to info@buildingbell.com">
                             info@buildingbell.com
-                        </a> &ndash; Legal information
+                        </a>
                     </p>
                 </div>
             </div>
