--- a/Views/Renderings/Home/RegisterBox.cshtml
+++ b/Views/Renderings/Home/RegisterBox.cshtml
@@ -3,7 +3,7 @@
         <div id="innerContent02">
             <div id="mainContent">
                 <!-- Change -->
-                <h2 class="PageHeading DarkScheme">Register</h2>
+                <h2 class="PageHeading DarkScheme">@Sitecore.Globalization.Translate.Text("register")</h2>
                 <!-- Change -->
                 @using (Html.BeginRouteForm(Sitecore.Mvc.Configuration.MvcSettings.SitecoreRouteName, FormMethod.Post))
                 {
@@ -12,7 +12,7 @@
                         <div class="HrReplacement HrStyle02 HrSpacing01"><hr class="Hidden" /></div>
 
                         <div class="FormItem FormItemSpacing01 LightScheme ">
-                            <label class="TextLabel" for="email">First Name: </label>
+                            <label class="TextLabel" for="email">@Sitecore.Globalization.Translate.Text("first-name"): </label>
                             <div class="TextInputWrapper01 TextInputSize01">
                                 <div class="TextInputWrapper02">
                                     <input type="text" name="firstName" id="firstName" class="TextInput LightScheme" required />
@@ -21,7 +21,7 @@
                             <div class="Clr"></div>
                         </div>
                         <div class="FormItem FormItemSpacing01 LightScheme ">
-                            <label class="TextLabel" for="email">Last Name: </label>
+                            <label class="TextLabel" for="email">@Sitecore.Globalization.Translate.Text("last-name"): </label>
                             <div class="TextInputWrapper01 TextInputSize01">
                                 <div class="TextInputWrapper02">
                                     <input type="text" name="lastName" id="lastName" class="TextInput LightScheme" required />
@@ -30,7 +30,7 @@
                             <div class="Clr"></div>
                         </div>
                         <div class="FormItem FormItemSpacing01 LightScheme ">
-                            <label class="TextLabel" for="email">Email address: </label>
+                            <label class="TextLabel" for="email">@Sitecore.Globalization.Translate.Text("email") </label>
                             <div class="TextInputWrapper01 TextInputSize01">
                                 <div class="TextInputWrapper02">
                                     <input type="email" name="email" id="email" class="TextInput LightScheme" required />
@@ -40,7 +40,7 @@
                             <p class="NewsLetterError MarginForgot" id="errorEmail">@ViewBag.ExistedEmail</p>
                         </div>
                         <div class="FormItem FormItemSpacing01 LightScheme ">
-                            <label class="TextLabel" for="email">Password: </label>
+                            <label class="TextLabel" for="email">@Sitecore.Globalization.Translate.Text("password"): </label>
                             <div class="TextInputWrapper01 TextInputSize01">
                                 <div class="TextInputWrapper02">
                                     <input type="password" name="password" id="password" class="TextInput LightScheme" required />
@@ -49,7 +49,7 @@
                             <div class="Clr"></div>
                         </div>
                         <div class="FormItem FormItemSpacing01 LightScheme ">
-                            <label class="TextLabel" for="email">Re-Password: </label>
+                            <label class="TextLabel" for="email">@Sitecore.Globalization.Translate.Text("re-password"): </label>
                             <div class="TextInputWrapper01 TextInputSize01">
                                 <div class="TextInputWrapper02">
                                     <input type="password" name="rePassword" id="rePassword" class="TextInput LightScheme" required />
@@ -64,12 +64,12 @@
                         <div class="ButtonGroup ButtonGroupSpacing01 PaddingButton">
                             <div class="FormButtonWrapper01">
                                 <div class="FormButtonWrapper02">
-                                    <input class="CommonFormBtn" type="submit" title="Register" value="Register" />
+                                    <input class="CommonFormBtn" type="submit" title="@Sitecore.Globalization.Translate.Text("register")" value="@Sitecore.Globalization.Translate.Text("register")" />
                                 </div>
                             </div>
                             <div class="FormButtonWrapper01">
                                 <div class="FormButtonWrapper02">
-                                    <input class="CommonFormBtn" type="reset" title="Cancel" value="Cancel" />
+                                    <input class="CommonFormBtn" type="reset" title="@Sitecore.Globalization.Translate.Text("cancel")" value="@Sitecore.Globalization.Translate.Text("cancel")" />
                                 </div>
                             </div>
                         </div>
