--- a/Views/Renderings/Transaction/TransactionDetails.cshtml
+++ b/Views/Renderings/Transaction/TransactionDetails.cshtml
@@ -6,7 +6,7 @@
             <div id="mainContent">
                 <!--Images Slide -->
                 <div class="BackButton">
-                    <a href="/TransactionList" title="Back to list" class="BackBtn "><span class="ColorBackBtn">Back to list</span></a>
+                    <a href="/TransactionList" title="Back to list" class="BackBtn "><span class="ColorBackBtn">@Sitecore.Globalization.Translate.Text("back")</span></a>
                 </div>
                 <div class="HrReplacement HrStyle05 LineNavigation1">
                     <hr class="Hidden" />
@@ -17,7 +17,7 @@
                     
                     <!--add a tag to zoom image-->
                     <div class=" BlockSearchItemInfo01Alt01 BlockSearchItemInfo01 LightScheme WidthTrans">
-                        <span>Posted by : Admin</span>
+                        <span>@Sitecore.Globalization.Translate.Text("posted")</span>
                         <br />
                         <br />
                         @Model.Location
@@ -70,30 +70,30 @@
                 <div class="BlockDetailsInfo">
                     <div class="MultiColumn01 Colum1">
                         <p>
-                            <span>Category</span>@Model.TransactionCategoryName
+                            <span>@Sitecore.Globalization.Translate.Text("category")</span>@Model.TransactionCategoryName
                         </p>
                         <p>
-                            <span>Type</span>@Model.TransactionTypeName
+                            <span>@Sitecore.Globalization.Translate.Text("type")</span>@Model.TransactionTypeName
                         </p>
                         <p>
-                            <span>Location</span>@Model.Location
+                            <span>@Sitecore.Globalization.Translate.Text("location")</span>@Model.Location
                         </p>
                         <p>
-                            <span>Number of floors</span>@Model.NumberOfFloors
+                            <span>@Sitecore.Globalization.Translate.Text("number-of-floors")</span>@Model.NumberOfFloors
                         </p>
                     </div>
                     <div class="MultiColumn01 Colum2">
                         <p>
-                            <span>Area</span>@Model.Area
+                            <span>@Sitecore.Globalization.Translate.Text("area")</span>@Model.Area
                         </p>
                         <p>
-                            <span>Number of bedrooms</span>@Model.NumberOfBedRooms
+                            <span>@Sitecore.Globalization.Translate.Text("number-of-bedrooms")</span>@Model.NumberOfBedRooms
                         </p>
                         <p>
-                            <span>Number of bathrooms</span>@Model.NumberOfBathRooms
+                            <span>@Sitecore.Globalization.Translate.Text("number-of-bathrooms")</span>@Model.NumberOfBathRooms
                         </p>
                         <p>
-                            <span>Property condition</span>@Model.PropertyCondition
+                            <span>@Sitecore.Globalization.Translate.Text("property-condition")</span>@Model.PropertyCondition
                         </p>
                     </div>
                 </div>
